--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@
 /DaXiong.Tools/DaXiong.Demo.WebApi/bin/Debug/net5.0
 /DaXiong.Tools/DaXiong.Demo.WebApi/obj
 /DaXiong.Tools/DaXiong.Tools.Configuration/bin/Debug
+/DaXiong.Tools/.vs/DaXiong.Tools/DesignTimeBuild/.dtbcache.v2
