--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,5 @@ build/
 /.vs
 /DaXiong.Tools/.vs/DaXiong.Tools/v16
 /DaXiong.Tools/.vs/DaXiong.Tools/DesignTimeBuild
+/DaXiong.Tools/.vs/DaXiong.Tools/FileContentIndex
+/DaXiong.Tools/.vs/DaXiong.Tools/v17
