--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ build/
 /DaXiong.Tools/.vs/DaXiong.Tools/DesignTimeBuild
 /DaXiong.Tools/.vs/DaXiong.Tools/FileContentIndex
 /DaXiong.Tools/.vs/DaXiong.Tools/v17
+/DaXiong.Tools/.vs/ProjectEvaluation
