--- a/DaXiong.Tools/DaXiong.Tools.Core/DaXiong.Tools.Core.csproj
+++ b/DaXiong.Tools/DaXiong.Tools.Core/DaXiong.Tools.Core.csproj
@@ -6,7 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
   </ItemGroup>
 
 </Project>
