添加测试用例

--- a/DaXiong.Tools/DaXiong.Tools.Xunit/DaXiong.Tools.Xunit.csproj
+++ b/DaXiong.Tools/DaXiong.Tools.Xunit/DaXiong.Tools.Xunit.csproj
@@ -19,4 +19,14 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DaXiong.Tools.Configuration\DaXiong.Tools.Configuration.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Configuration\app.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
